--- a/e-habitat_test.html
+++ b/e-habitat_test.html
@@ -105,8 +105,8 @@
 			
 	    	var stage = new Kinetic.Stage({
 	          container: "container",
-	          width: document.width-10,
-	          height: document.height - 60
+	          width: $(document).width() -10,
+	          height: $(document).height() - 60
 	        });
 	        
 	        
@@ -331,8 +331,8 @@
 				</div>
             </div>
             <div class="modal-footer">
-              <a href="#" class="btn" data-dismiss="modal">Close</a>
-              <button href="#" class="btn btn-primary" onclick="WorkFlow_UI.io.test()">Save changes</button>
+              <a href="#" class="btn" data-dismiss="modal">Done</a>
+              <!--<button href="#" class="btn btn-primary" onclick="WorkFlow_UI.io.test()">Save changes</button>-->
             </div>
      </div>
   </body>
