--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
 				</div>
             </div>
             <div class="modal-footer">
-              <a href="#" class="btn" data-dismiss="modal">Close</a>
-              <button href="#" class="btn btn-primary" onclick="WorkFlow_UI.io.test()">Save changes</button>
+              <a href="#" class="btn" data-dismiss="modal">Done</a>
+              <!--<button href="#" class="btn btn-primary" onclick="WorkFlow_UI.io.test()">Save changes</button>-->
             </div>
      </div>
   </body>
