Rename of Workflow UI
Rename as did not work on the server

--- a/e-habitat_test.html
+++ b/e-habitat_test.html
@@ -70,7 +70,7 @@
 	<script type="text/javascript" src="js/kinetic.workflowLayer.js"></script>
     <script type="text/javascript" src="js/kinetic.workFlowElements.js"></script>
     <script type="text/javascript" src="js/kinetic.workFlow.js"></script>
-    <script type="text/javascript" src="js/workFlow_ui.js"></script>
+    <script type="text/javascript" src="js/workFlow.ui.js"></script>
     <script type="text/javascript" src="js/workFlow.js"></script>
 	
 	
