--- a/e-habitat_test.html
+++ b/e-habitat_test.html
@@ -70,8 +70,8 @@
 	<script type="text/javascript" src="js/kinetic.workflowLayer.js"></script>
     <script type="text/javascript" src="js/kinetic.workFlowElements.js"></script>
     <script type="text/javascript" src="js/kinetic.workFlow.js"></script>
-    <script type="text/javascript" src="js/workFlow.ui.js"></script>
-    <script type="text/javascript" src="js/workFlow.js"></script>
+    <script type="text/javascript" src="js/workflow.ui.js"></script>
+    <script type="text/javascript" src="js/workflow.js"></script>
 	
 	
 	<script src="js/lib/underscore.js"></script>
