Modal title change
Change of title for input and output for modal.

--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
         <a class="brand" href="">Uncert Web</a>
         <div class="nav-collapse">
           <ul class="nav">
-          	<li><a href="#" id="moveup">Move Up</a></li>
-            <li><a href="#" id="io">Toggle Input/Output Mode - Off</a></li>
-            <li><a href="#" id="redraw">Auto Layout</a></li>
+          	<li><a id="moveup">Move Up</a></li>
+            <li><a id="io">Toggle Input/Output Mode - Off</a></li>
+            <li><a id="redraw">Auto Layout</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div>
