Adding New Workflow
Gives the ability to add a new workflow.
Also hack in the new kinetics library, so children's children are not
removed.

--- a/e-habitat_test.html
+++ b/e-habitat_test.html
@@ -76,7 +76,7 @@
 	
 	<script src="js/lib/underscore.js"></script>
 	<script src="js/lib/bootstrap.js"></script>
-	
+	<script src="js/lib/spin.min.js"></script>
     
     
     <script type="text/javascript">
