--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     			$('a[rel="tooltip"]').tooltip();
 			});
 			// Adding a Drop Down Login Form to Bootstrap’s Navbar
-			// http://mifsud.me/adding-dropdown-login-form-bootstraps-navbar/
+			// 
 			$(function() {
 			    // Setup drop down menu
 			    $('.dropdown-toggle').dropdown();
@@ -104,8 +104,8 @@
 			
 	    	var stage = new Kinetic.Stage({
 	          container: "container",
-	          width: document.width-10,
-	          height: document.height - 60
+	          width: $(document).width()-10,
+	          height:$(document).height() - 60
 	        });
 	        
 	        
