Format of IO Modal
Setting max width for long descriptions

--- a/index.html
+++ b/index.html
@@ -16,16 +16,6 @@
         display: inline-block;
         overflow: scroll;
       }
-      #buttons {
-        position: absolute;
-        top: 5px;
-        left: 10px;
-      }
-      #buttons > input {
-        padding: 10px;
-        display: block;
-        margin-top: 5px;
-      }
       .alert {
 		  margin-bottom: 5px;
 		  }
@@ -250,7 +240,7 @@
             </div>
      </div>
      
-     <div id="newWFModal" class="modal hide fade" style="display: none; ">
+     <div id="newWFModal" class="modal hide" style="display: none; ">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">×</button>
               <h3>New WorkFlow</h3>
@@ -284,6 +274,6 @@
               <!--<button href="#" class="btn btn-primary" onclick="WorkFlow_UI.io.test()">Save changes</button>-->
             </div>
      </div>
-
+     
   </body>
 </html>
