--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
      </div>
      <div id="toolbox" class="modal hide draggable" style="display: none; ">
             <div class="modal-header">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#toolboxBody" href="#toolboxBody">Toolbox - Main Workflow</a>
+              <a class="accordion-toggle" id="toolboxTitle" data-toggle="collapse" data-parent="#toolboxBody" href="#toolboxBody">Toolbox - Main Workflow</a>
             </div>
             <div class="modal-body collapse" id="toolboxBody">
             
