--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     <script src="js/lib/kinetic.line.js"></script>
 	<script src="js/lib/kinetic.bezier.js"></script>
 	<script type="text/javascript" src="js/kinetic.workflowLayer.js"></script>
-    <script type="text/javascript" src="js/kinetic.workFlowElements.js"></script>
+    <script type="text/javascript" src="js/kinetic.workFlowElement.js"></script>
+    <script type="text/javascript" src="js/kinetic.workFlowComponents.js"></script>
     <script type="text/javascript" src="js/kinetic.workFlow.js"></script>
     <script type="text/javascript" src="js/workflow.ui.js"></script>
     <script type="text/javascript" src="js/workflow.js"></script>
