--- a/index.html
+++ b/index.html
@@ -252,7 +252,21 @@
               <!--<button href="#" class="btn btn-primary" onclick="WorkFlow_UI.io.test()">Save changes</button>-->
             </div>
      </div>
-     
+     <div id="ioWorkFlowModal" class="modal hide fade" style="display: none; ">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">×</button>
+              <h3 id="ioWorkFlowHeader"></h3>
+            </div>
+            <div class="modal-body">
+				<div class="span6" id="ioDropdownWF">
+					
+				</div>
+            </div>
+            <div class="modal-footer">
+              <a class="btn" data-dismiss="modal">Done</a>
+              <!--<button href="#" class="btn btn-primary" onclick="WorkFlow_UI.io.test()">Save changes</button>-->
+            </div>
+     </div>
      <div id="newWFModal" class="modal hide" style="display: none; ">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">×</button>
