--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           	<li><a id="moveup">Move Up</a></li>
             <li><a id="io">Toggle Input/Output Mode - Off</a></li>
             <li><a id="redraw">Auto Layout</a></li>
-            <li><a id="setOrder">Set Ordeccr</a></li>
+            <li><a id="setOrder">Set Order</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div>
@@ -292,6 +292,32 @@
 			        e.stopPropagation();
 			    });
 			});
+			
+			document.getElementById('moveup').addEventListener('click', function() {
+          		layer.moveUp();
+        	}, false);
+        	document.getElementById('addWF').addEventListener('click', function() {
+          		WorkFlow_UI.addWF.open();
+        	}, false);
+        	document.getElementById('io').addEventListener('click', function() {
+          		
+          		if(layer.toggleIOMode())
+          		{
+          			$("#io").html('Toggle Input/Output Mode - On');
+          		}
+          		else
+          		{
+          			$("#io").html('Toggle Input/Output Mode - Off');
+          		}
+          	}, false);
+          	document.getElementById('redraw').addEventListener('click', function() {
+          		layer.reDrawLayer();
+	        },false);
+	        document.getElementById('setOrder').addEventListener('click', function() {
+          		WorkFlow_UI.orderComponents.open();
+	        },false);
+			
+			
 			
 			
 	    	var stage = new Kinetic.Stage({
