Change object inspector
Change inspector form to vertical, easier to read

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 			              </div>
 			              <div class="accordion-body collapse in" id="componentInspector">
-				              <form class="form-horizontal">
+				              <form class="form-vertical">
 						        <fieldset>
 						          <div id="inspector">
 				                
